cmake_minimum_required(VERSION 3.17)
project(practice)

set(CMAKE_CXX_STANDARD 17)

# leetcode
add_executable(practice main.cpp)
add_executable(1-add-two-nums hash/1-add-two-nums.cpp)
add_executable(150-reverse-polish 150-reverse-polish.cpp)
add_executable(206-reverse-list linked_list/206-reverse-list.cpp)
add_executable(102-level-order-btree binary_tree/102-level-order-btree.cpp)
add_executable(101-symmetric-tree binary_tree/101-symmetric-tree.cpp)
add_executable(56-merge-interval 56-merge-interval.cpp)
add_executable(57-insert-interval 57-insert-interval.cpp)
add_executable(7-reverse-int 7-reverse-int.cpp)
add_executable(226-invert-tree binary_tree/226-invert-tree.cpp)
add_executable(509-fib dp/509-fib.cpp)
add_executable(62-unique-paths dp/62-unique-paths.cpp)
add_executable(64-min-path-sum dp/64-min-path-sum.cpp)
add_executable(322-coin-change dp/322-coin-change.cpp)
add_executable(recursion-traversal binary_tree/recursion-traversal.cpp)
add_executable(21-merge-sorted-list linked_list/21-merge-sorted-list.cpp)
add_executable(reverse-string string/344-reverse-string.cpp)
add_executable(intersection hash/349-intersection.cpp)
add_executable(27-remove-element array/27-remove-element.cpp)
add_executable(replace-space string/replace-space.cpp)
add_executable(max-depth binary_tree/104-max-depth.cpp)
add_executable(112-has-path-sum binary_tree/112-has-path-sum.cpp)
add_executable(236-lowest-common-ancestor binary_tree/236-lowest-common-ancestor.cpp)
add_executable(455-find-content-children greedy/455-find-content-children.cpp)
add_executable(46-permute backtracking/46-permute.cpp)
add_executable(47-permute-unique backtracking/47-permute-unique.cpp)
add_executable(77-combine backtracking/77-combine.cpp)
add_executable(743-network-delay graph/743-network-delay.cpp)
add_executable(617-merge-trees binary_tree/617-merge-trees.cpp)
add_executable(543-diameter-of-btree binary_tree/543-diameter-of-btree.cpp)
add_executable(200-island-number graph/200-island-number.cpp)
add_executable(19-remove-nth-from-end linked_list/19-remove-nth-from-end.cpp)
add_executable(26-remove-duplicates array/26-remove-duplicates.cpp)
add_executable(20-is-valid stack_queue/20-is-valid.cpp)
add_executable(39-combination-sum backtracking/39-combination-sum.cpp)
add_executable(5-longest-palindrome dp/5-longest-palindrome.cpp)
add_executable(141-has-cycle linked_list/141-has-cycle.cpp)
add_executable(67-add-binary string/67-add-binary.cpp)
add_executable(279-num-squares dp/279-num-squares.cpp)
add_executable(queue-with-two-stack stack_queue/queue-with-two-stack.cpp)

# cpp base
add_executable(object-model cpp/object-model.cpp)
add_executable(alignment cpp/alignment.cpp)
add_executable(stack-and-queue stack_queue/stack-and-queue.cpp)
add_executable(create-binary-tree binary_tree/create-binary-tree.cpp)
add_executable(stl-sort cpp/stl-sort.cpp)
add_executable(explict cpp/explict.cpp)
add_executable(bit-op cpp/bit-op.cpp)
add_executable(assert cpp/assert.cpp)
add_executable(operator cpp/operator.cpp)
add_executable(has-curve local_test/has-curve.cpp)

# cpp11
add_executable(auto cpp11/auto.cpp)
add_executable(nulltpr cpp11/nullptr.cpp)
add_executable(shared_ptr cpp11/shared_ptr.cpp)
add_executable(array cpp11/array.cpp)
add_executable(move cpp11/move.cpp)
add_executable(test_filesystem_rename filesystem/test_filesystem_rename.cpp)
add_executable(read-big-vec local_test/read-big-vec.cpp)

# cpp17
add_executable(optional cpp17/optional-test.cpp)

# design pattern
add_executable(singleton design_pattern/singleton.cpp)